--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "keywords": [],
   "author": "Zane Taylor",
-  "license": "ISC",
+  "license": "CC-BY-SA-4.0",
   "dependencies": {
     "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
